# afesta-tools

./: .cookiecutter.json  .flake8  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml  renovate.json
.github/: renovate.json
.github/workflows/: labeler.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/afesta_tools/: __init__.py  __main__.py  exceptions.py  progress.py  utils.py
src/afesta_tools/lpeg/: __init__.py  client.py  credentials.py
src/afesta_tools/vcs/: __init__.py  archive.py  chapter.py  goods.py
tests/: __init__.py  conftest.py  test_main.py  test_progress.py
tests/lpeg/: __init__.py  test_client.py  test_credentials.py
tests/vcs/: __init__.py  test_archive.py  test_goods.py
