[project]
authors = [
    {name = "byeonhyeok", email = "bhrevol@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.9,<4.0"
dependencies = [
    "click>=8.0.1",
    "loguru<1.0.0,>=0.7.2",
    "funcy<2.0,>=1.17",
    "fake-winreg<2.0.0,>=1.6.0",
    "tqdm<5.0.0,>=4.62.3",
    "aiohttp<4.0.0,>=3.8.1",
    "platformdirs<4.0.0,>=3.0.0",
    "lxml<5.0.0,>=4.7.1",
    "a10sa-script<1.0.0,>=0.1.2",
    "typing-extensions<5.0.0,>=4.0.1",
]
name = "afesta-tools"
version = "0.1.3"
description = "Afesta Tools"
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[project.urls]
Changelog = "https://github.com/bhrevol/afesta-tools/releases"
homepage = "https://github.com/bhrevol/afesta-tools"
repository = "https://github.com/bhrevol/afesta-tools"
documentation = "https://afesta-tools.readthedocs.io"

[project.scripts]
afesta = "afesta_tools.__main__:cli"
[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["afesta_tools", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "@overload"]

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
  "funcy.*",
  "tqdm.*",
  "pytest_asyncio.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "Pygments>=2.10.0",
    "black>=21.10b0",
    "coverage[toml]>=6.2",
    "darglint>=1.8.1",
    "flake8>=4.0.1",
    "flake8-bandit>=2.1.2",
    "flake8-bugbear>=21.9.2",
    "flake8-docstrings>=1.6.0",
    "flake8-rst-docstrings>=0.2.5",
    "furo>=2021.11.12",
    "isort>=5.10.1",
    "mypy>=0.930",
    "pep8-naming>=0.12.1",
    "pre-commit>=2.16.0",
    "pre-commit-hooks>=4.1.0",
    "pytest>=6.2.5",
    "pyupgrade>=2.29.1",
    "safety>=1.10.3",
    "sphinx>=4.3.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-click>=3.0.2",
    "typeguard>=2.13.3",
    "xdoctest[colors]>=0.15.10",
    "pytest-mock<4.0.0,>=3.6.1",
    "pytest-asyncio<1.0.0,>=0.21.1",
    "aioresponses<1.0.0,>=0.7.3",
    "lxml-stubs<1.0.0,>=0.4.0",
]

[tool.pdm.build]
includes = []
